fix : bg-primary color and z-index of paragraph in learn-game

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@
 @layer components {
   .bg-primary
   {
-    @apply bg-blue-100 
+    @apply bg-blue-50
   }
 
   .bg-secondary
